--- a/sections/connexionResults/dbProducts.html
+++ b/sections/connexionResults/dbProducts.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<title>Produit enregistré.</title>
-		<link rel="stylesheet" type="text/css" href="design.css">
+		<link rel="stylesheet" type="text/css" href="../../css/general/design.css">
 	</head>
+	
 	<body>
 			<header>
 				<h1>Produit enregistré</h1>
