--- a/sections/directory.html
+++ b/sections/directory.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<title>Directory</title>
-		<link rel="stylesheet" type="text/css" href="../directory.css">
+		<link rel="stylesheet" type="text/css" href="../css/sections/directory.css">
 	</head>
-
+	
 	<body>
 		
 			<div id="menu">
