--- a/sections/manager.html
+++ b/sections/manager.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<title>Manager</title>
-		<link rel="stylesheet" type="text/css" href="../manager.css" />
-		<link rel="stylesheet" type="text/css" href="design.css">
+		<link rel="stylesheet" type="text/css" href="../css/sections/manager.css" />
 	</head>
-
+	
 	<body>
 		<div>
 			<img src="../images/manager-945438_1920.jpg" alt="Photo du directeur." >			
