--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
 		<title>Accueil</title>
-		<meta name="description" content="">
 		<meta name="author" content="Pascal Aubé-Larouche et Jean Turgeon">
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
-
+	
 	<body>
 			<div id="menu">
 				<a href="" class="item"><img src="images/logo3.png" alt="Voyage Xpérience"></a>
