--- a/products/product4.html
+++ b/products/product4.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<title>Asie exotique</title>
-		<link rel="stylesheet" type="text/css" href="prodStyle.css" />
+		<link rel="stylesheet" type="text/css" href="../css/products/product.css" />
 	</head>
+	
 	<body>
 			<header>
 				<h1>Asie exotique</h1>
