--- a/sections/connexion.html
+++ b/sections/connexion.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<title>Connexion</title>
-		<link rel="stylesheet" type="text/css" href="../connexion.css">
+		<link rel="stylesheet" type="text/css" href="../css/sections/connexion.css">
 	</head>
+	
 	<body>
 		<div id="menu">
 					<a href="../index.html" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
