--- a/sections/contactus.html
+++ b/sections/contactus.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<title>Contact Us</title>		
-		<link rel="stylesheet" type="text/css" href="../contactus.css">
+		<link rel="stylesheet" type="text/css" href="../css/sections/contactus.css">
 	</head>
+	
 	<body>
 			<div id="contactInfo">
 				<h1><div>Pour réserver: </div><div id="phone">1 800 555-1111</div></h1>
