Adjusted relative link with new structure for part 2

--- a/html/connexion.html
+++ b/html/connexion.html
@@ -8,13 +8,13 @@
 	
 	<body>
 		<div id="menu">
-					<a href="../index.html" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
+					<a href="index.html" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
 					<a href="" class="item">Connexion</a>
 					<a href="" class="item"></a>
 		</div>
 		<div id="centre"><div>
 			<h4>Ajouter un produit</h4>
-			<form id="productForm" action="connexionResults/dbProducts.html">
+			<form id="productForm" action="dbProducts.html">
 			<table>
 				<tr>
 					<td class="tableLabel">Nom:</td>
@@ -40,7 +40,7 @@
 			</form>
 			<HR>
 			<h4>Ajouter un employé</h4>
-			<form id="employeeForm" action="connexionResults/dbEmployees.html">
+			<form id="employeeForm" action="dbEmployees.html">
 			<table>
 				<tr>
 					<td class="tableLabel">Nom:</td>
