--- a/html/directory.html
+++ b/html/directory.html
@@ -9,7 +9,7 @@
 	<body>
 		
 			<div id="menu">
-					<a href="../index.html" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
+					<a href="index.html" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
 					<a href="" class="item">Bottin</a>
 					<a href="" class="item"></a>
 			</div>
