--- a/html/index.html
+++ b/html/index.html
@@ -4,17 +4,17 @@
 		<meta charset="utf-8">
 		<title>Accueil</title>
 		<meta name="author" content="Pascal Aubé-Larouche et Jean Turgeon">
-		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="../css/index.css">
 	</head>
 	
 	<body>
 			<div id="menu">
-				<a href="" class="item"><img src="images/logo3.png" alt="Voyage Xpérience"></a>
+				<a href="" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
 				<a href="" class="item"></a>
-				<a href="sections/manager.html" class="item" target="mainIframe">Directeur</a>
-				<a href="sections/contactus.html" class="item" target="mainIframe">Contact</a>
-				<a href="sections/directory.html" class="item" target="_self">Bottin</a>
-				<a href="sections/connexion.html" class="item" target="_self">Connexion</a>
+				<a href="manager.html" class="item" target="mainIframe">Directeur</a>
+				<a href="contactus.html" class="item" target="mainIframe">Contact</a>
+				<a href="directory.html" class="item" target="_self">Bottin</a>
+				<a href="connexion.html" class="item" target="_self">Connexion</a>
 			</div>
 			<div id="centre">
 				<div id="list">
