--- a/html/products/product1.html
+++ b/html/products/product1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Le Meilleur de l'Europe</title>
-		<link rel="stylesheet" type="text/css" href="../css/products/product.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/products/product.css" />
 	</head>
 	
 	<body>
@@ -14,7 +14,7 @@
 				23 jours / 21 nuits
 			</div>
 			<div>
-				<img src="prodImages/jturgeon_rome_0508_44.jpg" />
+				<img src="../../images/productsImages/jturgeon_rome_0508_44.jpg" />
 				Visitez les incontournables du Vieux Continent dans ce périple de 23 jours qui vous permettra de découvrir les principaux attraits de la région. 
 				De la Catalogne à l'Autriche en passant par la Provence, ce circuit vous donnera l'occasion d'explorer les multiples facettes du meilleur de l'Europe.  
 			</div>
