--- a/html/products/product3.html
+++ b/html/products/product3.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Safaris de rêve en Afrique</title>
-		<link rel="stylesheet" type="text/css" href="../css/products/product.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/products/product.css" />
 	</head>
 	
 	<body>
@@ -14,7 +14,7 @@
 				21 jours / 19 nuits
 			</div>
 			<div>
-				<img src="prodImages/lion-794962_1280.jpg" />
+				<img src="../../images/productsImages/lion-794962_1280.jpg" />
 				Le rêve d'une vie est enfin à votre portée! Ce voyage inoubliable vous fera découvrir la mosaïque culturelle du pays
 				de Mandela, puis le célèbre train de luxe Shangololo vers la Namibie. Ensuite vous vous dirigerez vers le Kenya et
 				la Tanzanie, au coeur des plaines sauvages d'Afrique pour y observer les animaux dans les plus mythiques réserves fauniques. 				  
