--- a/html/products/product6.html
+++ b/html/products/product6.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Horizons du Pacifique Sud</title>
-		<link rel="stylesheet" type="text/css" href="../css/products/product.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/products/product.css" />
 	</head>
 	
 	<body>
@@ -14,7 +14,7 @@
 				23 jours / 20 nuits
 			</div>
 			<div>
-				<img src="prodImages/ayers-rock-587828_1280.jpg" />
+				<img src="../../images/productsImages/ayers-rock-587828_1280.jpg" />
 				Partez à la conquête de l'Océanie, terres reculées et convoitées qui sont le rêve de plusieurs
 				voyageurs, notre circuit vous donnera l'opportunité d'explorer cette région du monde à votre guise.
 				Des métropoles australiennes aux plages de Fidji en passant par la Terre du Milieu, vous serez 
