--- a/html/dbEmployees.html
+++ b/html/dbEmployees.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Employé enregistré.</title>
-		<link rel="stylesheet" type="text/css" href="../../css/general/design.css">
+		<link rel="stylesheet" type="text/css" href="../css/general/design.css">
 	</head>
 	
 	<body>
 			<header>
 				<h1>Employé enregistré</h1>
 			</header>
-			<a class="bouton" href="../connexion.html">Retourner à la page de connexion</a>
+			<a class="bouton" href="connexion.html">Retourner à la page de connexion</a>
 	</body>
 </html>
