--- a/html/products/product2.html
+++ b/html/products/product2.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Découverte de l'Amérique du Sud</title>
-		<link rel="stylesheet" type="text/css" href="../css/products/product.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/products/product.css" />
 	</head>
 	
 	<body>
@@ -14,7 +14,7 @@
 				21 jours / 19 nuits
 			</div>
 			<div>
-				<img src="prodImages/lighthouse-530049_1280.jpg" />
+				<img src="../../images/productsImages/lighthouse-530049_1280.jpg" />
 				Parfaite introduction au continent sud-américain, ce circuit est l'occasion idéale pour découvrir les
 				incontournables des quatre pays les plus célèbres de la région: le Pérou, le Chili, l'Argentine et le Brésil.
 				De plus, une croisière en Patagonie vous garantira un dépaysement inoubliable. 
