--- a/html/products/product4.html
+++ b/html/products/product4.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Asie exotique</title>
-		<link rel="stylesheet" type="text/css" href="../css/products/product.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/products/product.css" />
 	</head>
 	
 	<body>
@@ -14,7 +14,7 @@
 				20 jours / 18 nuits
 			</div>
 			<div>
-				<img src="prodImages/great-wall-of-china-814143_1280.jpg" />
+				<img src="../../images/productsImages/great-wall-of-china-814143_1280.jpg" />
 				Parcourez les lieux les plus prisés d'Orient avec ce circuit qui inclus les visites des principales capitales  
 				d'Asie, de l'hyperactive Tokyo en passant par la chaotique Bangkok, ce voyage saura vous dépayser sans toutefois
 				renier au plus grand confort.
