--- a/html/products/product5.html
+++ b/html/products/product5.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Délices des Indes</title>
-		<link rel="stylesheet" type="text/css" href="../css/products/product.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/products/product.css" />
 	</head>
 	
 	<body>
@@ -14,7 +14,7 @@
 				23 jours / 21 nuits
 			</div>
 			<div>
-				<img src="prodImages/jturgeon_INDIA_0208_092.jpg">
+				<img src="../../images/productsImages/jturgeon_INDIA_0208_092.jpg">
 				Soyez éblouis par le spectre de tout ce que l'Inde a à offrir dans ce voyage somptueux au coeur du sous-continent, carrefour
 				culturel et historique qui pemet de découvrir un métissage unique de civilisations millénaires où le temps est suspendu. 
 				L'inde est résolumént entrée dans le 21e siècle sans jamais renier son patrimoine imposant. Le tout offre une destination
