Ajuster le lien directeur et contact

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -7,18 +7,33 @@
 	</head>
 	
 	<body>
-			<div id="contactInfo">
-				<h1><div>Pour réserver: </div><div id="phone">1 800 555-1111</div></h1>
-				<a href="mailto:voyages@xperience.com">voyages@xperience.com</a>
-				<br><br>
-				<address>
-					125 rue Deschamps <br>
-					Montréal (Québec)
-					H3R 1P8				 
-				</address>
+			<div id="menu">
+				<a href="index.html" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
+				<a href="" class="item">Contact</a>
+				<a href="" class="item"></a>
 			</div>
-			<div id="contactLogo">
-				<img src="../images/frog-949601_1280.jpg" alt="Voyage Plus PAL" style="width:304px;height:228px;">
+			
+			<div id="centre">
+			<table>
+				<tbody>
+				<tr><td><h1>Pour réserver:</h1></td></tr>
+				<tr><td><div id="phone">1 800 555-1111</div></td></tr>
+				<tr><td><a href="mailto:voyages@xperience.com">voyages@xperience.com</a></td></tr>
+				<tr><td><address>
+						125 rue Deschamps <br>
+						Montréal (Québec)
+						H3R 1P8				 
+					</address></td></tr>
+			</tbody>
+			</table>
 			</div>
+			
+			
+			
+			
+			<footer>
+				<div>Ce site est développé par <a href="mailto:pascalaubelarouche@voyagesxperience.com?subject=Voyages Xpérience">Pascal Aubé-Larouche</a> et <a href="mailto:jeanturgeon@voyagesxperience.com?subject=Voyages Xpérience">Jean Turgeon</a> dans le cadre du cours 
+				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a></div>
+			</footer>
 	</body>
 </html>
