--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 				<a href="" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
 				<a href="" class="item"></a>
 				<a href="manager.html" class="item" target="mainIframe">Directeur</a>
-				<a href="contactus.html" class="item" target="mainIframe">Contact</a>
+				<a href="contactus.html" class="item" target="_self">Contact</a>
 				<a href="directory.html" class="item" target="_self">Bottin</a>
 				<a href="connexion.html" class="item" target="_self">Connexion</a>
 			</div>
