--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,24 @@
 		<title>Accueil</title>
 		<meta name="author" content="Pascal Aubé-Larouche et Jean Turgeon">
 		<link rel="stylesheet" type="text/css" href="../css/index.css">
+		<script type="text/javascript" src="../JS/jquery-2.1.4.min.js"></script> 
 	</head>
 	
 	<body>
 			<div id="menu">
-				<a href="" class="item"><img src="../images/logo3.png" alt="Voyage Xpérience"></a>
-				<a href="" class="item"></a>
+				<a href="" class="item">
+					<svg>
+					  <path id="path2161" class="st0" d="M95.1,31.4c0,0.1-5.2,1.7-11.5,3.7l-11.5,3.6l-0.4-1.2l-0.4-1.2L62.5,39
+						c-8.7,2.7-8.8,2.7-12.6,3.4c-5.3,1-30.7,6-32.1,6.3c-1.5,0.4-2.7,0.4-3.2,0c-0.4-0.3-0.5-0.4-1.2-2.6c-1-3.1-1.2-2.8,2.7-4
+						c1.7-0.5,3.1-1,3.2-1c0.1-0.1,0-0.4-0.7-1.5c-0.4-0.7-1.4-2.2-2-3.4c-0.7-1.2-1.6-2.8-2.1-3.6c-1.5-2.6-1.7-3-3-5.1
+						c-1.6-2.8-5.1-8.7-5.9-10C5.3,16.9,5,16.4,5,16.3c0-0.1,0.7-0.4,2.2-0.8l2.2-0.7l0.7,0.4c0.4,0.2,1.3,0.8,2,1.3c0.7,0.5,1.4,1,1.6,1
+						c0.1,0,1,0.6,1.9,1.3s2.5,1.7,3.5,2.4s2,1.4,2.3,1.5c0.7,0.5,4.9,3.4,6.5,4.4c0.9,0.6,2.5,1.7,3.6,2.4c1.1,0.8,2.4,1.6,2.8,1.9
+						c2.5,1.7,4.2,2.8,4.4,3.1l0.3,0.3l41.2-13c27.1-8.5,41.4-13,41.9-13c0.7-0.1,1,0,3.2,0.9c2.8,1.1,4.1,1.6,4.4,1.9
+						c1.5,1.2-0.6,3.8-5.1,6.7c-4,2.4-3.6,2.3-17.4,6.7c-6.8,2.2-12.3,4-12.4,4.1c-0.1,0.1,0,0.6,0.2,1.1C95,30.8,95.1,31.3,95.1,31.4
+						L95.1,31.4z"/>
+					</svg>
+				</a>
+				<a href="" class="item"><img src="../images/VoyagesXperiences_white.png"></a>
 				<a href="manager.html" class="item" target="mainIframe">Directeur</a>
 				<a href="contactus.html" class="item" target="_self">Contact</a>
 				<a href="directory.html" class="item" target="_self">Bottin</a>
