Ajout de Datable dans la page bottin et ajustement de directory.css en conséquence

--- a/html/directory.html
+++ b/html/directory.html
@@ -3,7 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Directory</title>
-		<link rel="stylesheet" type="text/css" href="../css/sections/directory.css">
+		<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css" />
+		<link rel="stylesheet" type="text/css" href="../css/sections/directory.css">		
+		<script src="../javascript/jquery/jquery-2.1.4.js"></script>
+		<script src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+		<script src="../javascript/directory.js"></script>
 	</head>
 	
 	<body>
