--- a/html/forms.html
+++ b/html/forms.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Connexion</title>
-		<link rel="stylesheet" type="text/css" href="../css/sections/connexion.css">
+		<link rel="stylesheet" type="text/css" href="../css/sections/forms.css">
 	</head>
 	
 	<body>
