--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
 					</svg>
 				<a href="" class="item"></a>
 				<a href="manager.html" class="item" target="mainIframe">Directeur</a>
-				<a href="contactus.html" class="item" target="_self">Contact</a>
+				<a href="contactus.html" class="item" target="mainIframe">Contact</a>
 				<a href="directory.html" class="item" target="_self">Bottin</a>
 				<a href="connection.html" class="item" target="_self">Connexion</a>
 			</div>
