--- a/html/connection.html
+++ b/html/connection.html
@@ -19,16 +19,16 @@
 				<table>
 					<tr>
 						<td class="tableLabel">Nom d'usager: </td>
-						<td><input type="text" size="50" name="userName"></td>
+						<td><input id="user" type="text" size="50" name="userName"></td>
 					</tr>
 					<tr>
 						<td class="tableLabel">Mot de passe: </td>
-						<td><input type="text" size="50" name="password"></td>
+						<td><input id="pass" type="password" size="50" name="password"></td>
 					</tr>				
 					<tr rowspan="2">
 						<td colspan="2">
 							<div id="buttonsSection">
-								<input type="submit" form="connection" value="Soumettre">
+								<input id="submit" onclick="validate()" type="submit" form="connection" value="Soumettre">
 			 					<input type="reset" form="connection" value="Réinitialiser">
 			 				</div>
 						</td>
