--- a/html/directory.html
+++ b/html/directory.html
@@ -30,7 +30,7 @@
 						</a>
 					</svg>
 					<a href="" class="item">Bottin</a>
-					<a href="" class="item"></a>
+					
 			</div>
 			
 			<div id="centre">
@@ -49,9 +49,11 @@
 				</tbody>
 			</table>
 			</div>
-			<footer>
-				<div>Ce site est développé par <a href="mailto:pascalaubelarouche@voyagesxperience.com?subject=Voyages Xpérience">Pascal Aubé-Larouche</a> et <a href="mailto:jeanturgeon@voyagesxperience.com?subject=Voyages Xpérience">Jean Turgeon</a> dans le cadre du cours 
-				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a></div>
-			</footer>
+			<div id="footer">
+				<footer>
+					<div>Ce site est développé par <a href="mailto:pascalaubelarouche@voyagesxperience.com?subject=Voyages Xpérience">Pascal Aubé-Larouche</a> et <a href="mailto:jeanturgeon@voyagesxperience.com?subject=Voyages Xpérience">Jean Turgeon</a> dans le cadre du cours 
+					<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a></div>
+				</footer>
+			</div>
 	</body>
 </html>
