--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/index.css">
 		<script src="../javascript/jquery/jquery-2.1.4.js"></script>
 		<script src="../javascript/connection.js"></script>
+		
 	</head>
 	
 	<body onload="infoConnection();">
@@ -37,12 +38,12 @@
 			<div id="centre">
 				<div id="list">
 					<h3>En vedette</h3>
-					<a href="products/product1.html" target="mainIframe">Le Meilleur de l'Europe</a><br>
-					<a href="products/product2.html" target="mainIframe">Découverte de l'Amérique du Sud</a><br>
-					<a href="products/product3.html" target="mainIframe">Safaris de rêve en Afrique</a><br>
-					<a href="products/product4.html" target="mainIframe">Asie exotique</a><br>
-					<a href="products/product5.html" target="mainIframe">Délices des Indes</a><br>
-					<a href="products/product6.html" target="mainIframe">Horizons du Pacifique Sud</a><br>		
+					<a href="product1.html">Le Meilleur de l'Europe</a><br>
+					<a href="product2.html">Découverte de l'Amérique du Sud</a><br>
+					<a href="product3.html">Safaris de rêve en Afrique</a><br>
+					<a href="product4.html">Asie exotique</a><br>
+					<a href="product5.html">Délices des Indes</a><br>
+					<a href="product6.html">Horizons du Pacifique Sud</a><br>		
 				<hr>
 					<h3>Tous nos voyages</h3>
 					<a href="categories/category1.html" target="mainIframe">Europe</a><br>
@@ -52,7 +53,7 @@
 					<a href="categories/category5.html" target="mainIframe">Moyen-Orient et Sous-continent Indien</a><br>
 					<a href="categories/category6.html" target="mainIframe">Pacifique Sud</a><br>	
 				</div>
-				<iframe id="frame" name="mainIframe" src="products/product1.html">Bienvenue</iframe>
+				<iframe id="frame" name="mainIframe" src="https://www.youtube.com/watch?v=dXi1FR8VEiA">Bienvenue</iframe>
 			</div>
 			<footer>
 				<div>Ce site est développé par <a href="mailto:pascalaubelarouche@voyagesxperience.com?subject=Voyages Xpérience">Pascal Aubé-Larouche</a> et <a href="mailto:jeanturgeon@voyagesxperience.com?subject=Voyages Xpérience">Jean Turgeon</a> dans le cadre du cours 
