correction des pages produits (ouverture et fermeture)

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/index.css">
 		<script src="../javascript/jquery/jquery-2.1.4.js"></script>
 		<script src="../javascript/connection.js"></script>
+		<script src="../javascript/product.js"></script>
 		
 	</head>
 	
@@ -38,12 +39,12 @@
 			<div id="centre">
 				<div id="list">
 					<h3>En vedette</h3>
-					<a href="product1.html">Le Meilleur de l'Europe</a><br>
-					<a href="product2.html">Découverte de l'Amérique du Sud</a><br>
-					<a href="product3.html">Safaris de rêve en Afrique</a><br>
-					<a href="product4.html">Asie exotique</a><br>
-					<a href="product5.html">Délices des Indes</a><br>
-					<a href="product6.html">Horizons du Pacifique Sud</a><br>		
+					<a href="product1.html" target="_blank">Le Meilleur de l'Europe</a><br>
+					<a href="product2.html" target="_blank">Découverte de l'Amérique du Sud</a><br>
+					<a href="product3.html" target="_blank">Safaris de rêve en Afrique</a><br>
+					<a href="product4.html" target="_blank">Asie exotique</a><br>
+					<a href="product5.html" target="_blank">Délices des Indes</a><br>
+					<a href="product6.html" target="_blank">Horizons du Pacifique Sud</a><br>		
 				<hr>
 					<h3>Tous nos voyages</h3>
 					<a href="categories/category1.html" target="mainIframe">Europe</a><br>
