--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,9 @@
 					<a href="categories/category5.html" target="mainIframe">Moyen-Orient et Sous-continent Indien</a><br>
 					<a href="categories/category6.html" target="mainIframe">Pacifique Sud</a><br>	
 				</div>
-				<iframe id="frame" name="mainIframe" src="https://www.youtube.com/watch?v=dXi1FR8VEiA">Bienvenue</iframe>
+				<div>
+				<iframe name="mainIframe" id="frame" src="https://www.youtube.com/watch?v=dXi1FR8VEiA"></iframe>
+				</div>
 			</div>
 			<footer>
 				<div>Ce site est développé par <a href="mailto:pascalaubelarouche@voyagesxperience.com?subject=Voyages Xpérience">Pascal Aubé-Larouche</a> et <a href="mailto:jeanturgeon@voyagesxperience.com?subject=Voyages Xpérience">Jean Turgeon</a> dans le cadre du cours 
