--- a/html/manager.html
+++ b/html/manager.html
@@ -6,9 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="../css/sections/manager.css" />
 	</head>
 	
-	<body>
-		<div>
-			<iframe id="frameYoutube" src="https://www.youtube.com/embed/Myq5V3ldiMA"></iframe>
-		</div>				
+	<body>	
+		<iframe width="600px" height="450px" src="https://www.youtube.com/embed/Myq5V3ldiMA">.</iframe>
+						
 	</body>
 </html>
