--- a/html/manager.html
+++ b/html/manager.html
@@ -7,7 +7,8 @@
 	</head>
 	
 	<body>	
-		<iframe width="600px" height="450px" src="https://www.youtube.com/embed/Myq5V3ldiMA">.</iframe>
-						
+		<div>
+			<iframe width="600px" height="450px" src="https://www.youtube.com/embed/Myq5V3ldiMA">.</iframe>
+		</div>			
 	</body>
 </html>
