--- a/html/connection.html
+++ b/html/connection.html
@@ -31,7 +31,6 @@
 					
 		</div>
 		<div id="centre">
-			<div>				
 				<form id="connection">
 				<table>
 					<tr>
@@ -50,8 +49,7 @@
 			 				</div>
 						</td>
 					</tr>
-				
-			</div>
+				</table>
 		</div>
 		<footer>
 			<div>
