--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
 					<a href="categories/category6.html" target="mainIframe">Pacifique Sud</a><br>	
 				</div>
 				
-				<iframe name="mainIframe" id="frame" src="https://www.youtube.com/watch?v=dXi1FR8VEiA"></iframe>
+				<iframe name="mainIframe" id="frame" src="https://www.youtube.com/embed/dXi1FR8VEiA"></iframe>
 				
 			</div>
 			<footer>
